# ezmodes-esp-base

./: CMakeLists.txt  README.md  idf_component.yml
.github/: copilot-instructions.md
agent/: design.md
examples/basic/: CMakeLists.txt  main.cpp
host_test/: CMakeLists.txt  test_modal_framework.cpp
host_test/stubs/: esp_err.h  esp_log.h  esp_lvgl_port.h  lvgl.h
host_test/stubs/freertos/: FreeRTOS.h  task.h
include/ezmodes/: modal_framework.hpp  mode_interface.hpp
src/: modal_framework.cpp
